--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.3",
+    "node": "^19.0.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.1",
