--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,7 +1,8 @@
 # frontend/
 backend/node_modules/
 backend/userController.js
-backend/.env
+# backend/.env
 backend/.DS_Store
 backend/models/otp.js
 backend/routes/server.js
+node_modules
